tests/unit/default/syntax-error/130-add-fk-table-parens-parens.e.t
---- IN ----
+FK%child()
---- OUT ----
---- ERR ----
syntax: expected <columns-ref-list-end> after `+FK%child(` near `)` at position 10 - at line 1
---- EXIT ----
1
